# OneCord

./: .gitignore  OneCord.ps1  README.md
src/: .gitignore  DESIGN.md  README.md  build.ps1  package.ps1
src/assets/: onecord.ini
src/installer/: AdminProcess.cs  CloudflareWarpService.cs  DiscordNrptService.cs  DiscordPaths.cs  IniConfig.cs  MainForm.cs  OneCord.Installer.csproj  OneCordLog.cs  Program.cs  Theme.cs  UiLayout.cs
src/installer/Controls/: CardPanel.cs  GradientButton.cs  GradientPanel.cs  ThemedMessageBox.cs
src/native/: CMakeLists.txt
src/native/src/: config.cpp  config.h  dllmain.cpp  exports.cpp  hooks.cpp  hooks.h  socks5.cpp  socks5.h
